# implot3d

./: .clang-format  .gitignore  README.md  implot3d.cpp  implot3d.h  implot3d_demo.cpp  implot3d_internal.h  implot3d_items.cpp  implot3d_meshes.cpp
.github/: copilot-instructions.md
.github/scripts/: .gitignore  update_readme.py
.github/scripts/readme_svgs/: github_data.py  requirements.txt
.github/scripts/redirect_readme/: Dockerfile  app.py
.github/scripts/update_readme/: update_readme.py
.github/workflows/: copilot-setup-steps.yml  linux.yml  macos.yml  main.yml  status_label.yml  update_readme.yml  windows.yml
example/: CMakeLists.txt  main.cpp
